Fix/bugfix horizontal scroll animation

--- a/blocks/about.css
+++ b/blocks/about.css
@@ -68,7 +68,6 @@
 @media screen and (max-width: 900px) {
   .about {
     max-width: 800px;
-    padding: 15px;
   }
 }
 
