--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,26 +1,20 @@
-@keyframes narrowDown {
+/*@keyframes infiniteScroll {
   0% {
-    transform: translateY(0);
+    transform: translate(0%);
   }
-  15% {
-    transform: translateY(-15px);
+  25% {
+    transform: translate(-255%);
   }
-  30% {
-    transform: translateY(0);
-  }
-  45% {
-    transform: translateY(-5px);
-  }
-  60% {
-    transform: translateY(0);
+  50% {
+    transform: translate(-255%);
   }
   75% {
-    transform: translateY(-5px);
+    transform: translate(0%);
   }
   100% {
-    transform: translateY(0);
+    transform: translate(0%);
   }
-}
+}*/
 
 .header {
   display: flex;
@@ -87,7 +81,7 @@
   max-width: 1232px;
   width: 100%;
   margin: 0;
-  padding: 200px 0 200px 0;
+  padding: 200px 0;
   color: #000;
 }
 
@@ -131,6 +125,13 @@
 }
 
 .header__images {
+  width: 100%;
+  height: 100%;
+  max-width: 1440px;
+  position: relative;
+}
+
+.header__inner-images {
   width: 100%;
   height: 100%;
   max-width: 1440px;
@@ -211,12 +212,14 @@
 @media screen and (min-width: 1023px) {
   .header__nav-bar {
     max-width: 90%;
+    align-self: center;
   }
 }
 
 @media screen and (max-width: 900px) {
   .header__nav-bar {
     max-width: 700px;
+    align-self: center;
   }
 
   .header__icon {
@@ -260,40 +263,146 @@
 }
 
 @media screen and (max-width: 700px) {
+  .header {
+    align-items: flex-start;
+    max-height: max-content;
+    height: 100%;
+    max-width: max-content;
+  }
+
+  .header__heading {
+    margin-bottom: 15px;
+  }
+
+  .header__paragraph {
+    margin-top: 0;
+    margin-left: 0;
+    text-align: left;
+  }
+
+  .header__images {
+    max-width: 700px;
+    /*animation: infiniteScroll 35s infinite ease-in-out;*/
+  }
+
+  @keyframes scroll {
+    to {
+      transform: translate(-100%);
+    }
+  }
+
+  .header__inner-images {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: max-content;
+    column-gap: 25px;
+    animation: scroll 10s linear infinite;
+    box-sizing: content-box;
+  }
+
+  .header__image {
+    border-radius: 10px;
+  }
+
+  /*.header__image:nth-child(2) {
+    animation-delay: calc(-0.1666666667 * 15);
+  }
+
+  .header__image:nth-child(3) {
+    animation-delay: calc(-0.3333333333 * 15);
+  }
+
+  .header__image:nth-child(4) {
+    animation-delay: calc(-0.5 * 15);
+  }
+
+  .header__image:nth-child(5) {
+    animation-delay: calc(-0.6666666667 * 15);
+  }
+
+  .header__image:nth-child(6) {
+    animation-delay: calc(-0.8333333333 * 15);
+  }
+
+  .header__image:nth-child(7) {
+    animation-delay: calc(-1 * 15);
+  }
+
+  .header__image:nth-child(8) {
+    animation-delay: calc(-1.1666666667 * 15);
+  }*/
+
+  .header__text {
+    padding: 100px 0;
+  }
+
   .header__nav-bar {
     max-width: 500px;
   }
 
   .header__image_1 {
-    max-width: 200px;
+    position: relative;
+    top: 0;
+    right: 0;
+    max-width: 350px;
+    max-height: 300px;
   }
 
   .header__image_2 {
-    max-width: 225px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 325px;
+    max-height: 300px;
   }
 
   .header__image_3 {
-    max-width: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 325px;
+    max-height: 300px;
   }
 
   .header__image_4 {
-    max-width: 175px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 325px;
+    max-height: 300px;
   }
 
   .header__image_5 {
-    max-width: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 200px;
+    max-height: 300px;
   }
 
   .header__image_6 {
-    max-width: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 200px;
+    max-height: 300px;
   }
 
   .header__image_7 {
-    max-width: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 200px;
+    max-height: 300px;
   }
 
   .header__image_8 {
-    max-width: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    max-width: 200px;
+    max-height: 300px;
   }
 }
 
