--- a/blocks/services.css
+++ b/blocks/services.css
@@ -365,6 +365,19 @@
 }
 
 @media screen and (max-width: 1023px) {
+  .services__title {
+    transform: translateX(0);
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+  }
+
+  .services__title_show {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0s;
+  }
+
   .services__item {
     transform: translateX(0);
     opacity: 0;
